feat: add room ownership to user info (#142)
